--- a/css/styles.css
+++ b/css/styles.css
@@ -63,6 +63,8 @@ body {
   top: 24px;
   left: 215px;
   color: #2196f3;
+  margin: 6px;
+  margin-left: 2px;
 }
 
 .header-link {
@@ -75,7 +77,8 @@ body {
   line-height: 16px;
   letter-spacing: 0.02em;
 }
-.header-link1 {
+
+.header-link-2 {
   text-decoration: none;
   color: #757575;
   font-style: normal;
@@ -83,13 +86,14 @@ body {
   font-size: 14px;
   line-height: 16px;
   letter-spacing: 0.02em;
+  padding-right: 50px;
 }
 
 .header-link:hover {
   color: var(--color-button-hover);
   text-decoration-line: none;
 }
-.header-link1:hover {
+.header-link-2:hover {
   color: var(--color-button-hover);
 }
 
@@ -225,6 +229,10 @@ h2 {
   box-shadow: 0px 1px 3px rgba(0, 0, 0, 0.12), 0px 1px 1px rgba(0, 0, 0, 0.14),
     0px 2px 1px rgba(0, 0, 0, 0.2);
   border-radius: 0px 0px 4px 4px;
+  margin-top: 20px;
+}
+.h2-equipo {
+  margin-top: 40px;
 }
 
 footer {
@@ -237,18 +245,22 @@ footer {
   color: var(--color-white);
   width: 231px;
   height: 21px;
-  padding-top: 60px;
+  padding-top: 50px;
   font-family: "Roboto", "sans-serif";
   font-style: normal;
   line-height: 24px;
   letter-spacing: 0.03em;
 }
-.container-address > p {
+.p-adress {
   margin: 0%;
+  font-size: 14px;
 }
 .p {
   color: #757575;
+  margin: 0%;
+  font-size: 14px;
 }
+
 /*aqui comienza portafolio*/
 
 .container-button {
